fixed z-index in reward

--- a/src/components/Rewards/Rewards.scss
+++ b/src/components/Rewards/Rewards.scss
@@ -7,6 +7,7 @@
   color: rgba(34,36,38,.75);
   display: grid;
   background-color: whitesmoke;
+  z-index: -1;
    
   &:hover {
     cursor: grab;
@@ -14,7 +15,6 @@
 
   .cardHeader {
     text-align: end;
-    margin-bottom: 2px;
   }
   .cardBody {
     display: grid;
@@ -31,9 +31,32 @@
 
 }
 
-.dragable-main-container {
-    margin: 0 !important;
+
+.unDraggCategory {
+  width: 60px;
+  height: 60px;
+  padding: 3px;
+  margin: 0 0 0 8px;
+  border: 1px solid rgba(34,36,38,.15);
+  border-radius: 5px;
+  color: rgba(34,36,38,.75);
+  display: grid;
+  background-color: whitesmoke;
+  z-index: -1;
+
+  .cardHeader {
+    text-align: end;
+  }
+  .cardBody {
+    display: grid;
+    justify-content: center;
+
+    .card-reward-title {
+      margin-bottom: 15px;
+    }
+  }
+
+  .crossIcon:hover {
+    cursor: pointer;
+  }
 }
-
-
-  
